# waymo-dataset-plugin

./: .gitmodules  CMakeLists.txt
include/: AudiElectronicsVentureDataset.hpp  Item.hpp  WaymoDataset.hpp  WiderPerson.hpp
src/: AudiElectronicsVentureDataset.cpp  TFRecordDataset.cpp  TFRecordDataset.hpp  WaymoDataset.cpp  WiderPerson.cpp
test/: AudiElectronicsVentureDatasetTest.cpp  CMakeLists.txt  WaymoDatasetTest.cpp  WaymoDatasetTest_.cpp  WiderPersonTest.cpp
